# ai-real-estate-agent

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  train.py  ui.py
api/: llm.py  schemas.py
notebooks/: eda_and_pipeline.ipynb
tests/: test_prompts.py
